chore: prettify files infra

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Loyalty App</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles/global.styles.css">
     <link rel="icon" type="image/svg+xml" href="assets/favicon.svg">
 </head>
 <body>
@@ -64,6 +64,6 @@
         </div>
     </section>
     
-    <script src="parallax.js"></script>
+    <script src="scripts/parallax.js"></script>
 </body>
 </html>
